--- a/package.json
+++ b/package.json
@@ -13,9 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stripe/stripe-js": "^1.11.0",
     "axios": "^0.21.1",
+    "gray-matter": "^4.0.2",
+    "marked": "^1.2.7",
     "next": "^10.0.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "stripe": "^8.132.0",
+    "styled-components": "^5.2.1",
+    "styled-normalize": "^8.0.7"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0"
   }
 }
